# trakt-sync

./: .env.example  .gitignore  Dockerfile  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
app/: __init__.py  auth.py  clients.py  config.py  db.py  exceptions.py  main.py  models.py  queue.py  schemas.py  services.py  utils.py  worker.py
app/templates/: trakt_admin.html
docs/: checklist-deploy-telegram-dokploy.md  novo-plano-telegram.md  openrouter-free-vision-fallback.md  plano-whatsapp-evolution-trakt.md
tests/: conftest.py  test_clients.py  test_config.py  test_db.py  test_main.py  test_pipeline.py  test_telegram_webhook.py  test_telegram_worker.py  test_utils.py  test_webhook.py  test_worker.py
