[project]
name = "trakt-sync"
version = "0.1.0"
description = "WhatsApp movie and series info bot powered by Evolution API, OpenRouter, TMDb, OMDb, and Trakt."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21.0",
  "alembic>=1.16.0",
  "arq>=0.26.3",
  "fastapi>=0.122.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic-settings>=2.10.1",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.41",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
